Fixed homepage image scaling on Safari
Fixed issue where the image shown on the homepage would be stretched to 4000 pixels on smaller devices when using the Safari browser

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,7 +44,8 @@ img.homepage-image {
 
     img.homepage-image {
         flex: 1;
-        max-width: calc(100% - 2rem);
+        max-width: 100%;
+        width: calc(100% - 2rem);
         height: auto;
         display: block;
         margin-left: 1rem;
